# PSn00bSDK

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE.md  README.md  TOOLCHAIN.md  changelog.txt  psn00bsdk-setup.mk  toolchain.txt
examples/: CMakeLists.txt  README.md  examples-setup.mk  makefile  readme.txt  sdk-common.mk
examples/balls/: balls  main.c  makefile
examples/beginner/cppdemo/: CMakeLists.txt  main.cpp  makefile
examples/beginner/hello/: CMakeLists.txt  main.c  makefile
examples/beginner/hellocpp/: CMakeLists.txt  main.cpp
examples/billboard/: billboard.c  makefile
examples/cartrom/: parse.inc
examples/cdbrowse/: iso.xml  main.c  makefile
examples/cdrom/cdbrowse/: CMakeLists.txt  ball16c.h  iso.xml  main.c  makefile  system.cnf
examples/cdrom/cdxa/: CMakeLists.txt  iso.xml  main.c  makefile
examples/cdxa/: iso.xml  main.c  makefile  system.cnf
examples/childexec/: child_exe.s  makefile  parent.c
examples/demos/n00bdemo/: CMakeLists.txt  data.h  data.s  data.s.template  data.xml  data.xml.template  disp.c  disp.h  lightdemo.c  logo.c  logo.h  main.c  makefile  overlay.c  plasma_tbl.h  plasmagen.s  scrolltext.c  smd.h  smd.s  smd_cel.s  smd_flat.s  smd_s.h
examples/fpscam/: main.c  makefile
examples/graphics/balls/: CMakeLists.txt  main.c  makefile
examples/graphics/billboard/: CMakeLists.txt  billboard.c  makefile  texture64.tim  tim.s  tim.s.template
examples/graphics/fpscam/: CMakeLists.txt  clip.h  lookat.c  lookat.h  main.c  makefile
examples/graphics/gte/: CMakeLists.txt  main.c  makefile  texture.tim
examples/graphics/hdtv/: CMakeLists.txt  clip.c  clip.h  lookat.h  main.c  makefile
examples/graphics/render2tex/: CMakeLists.txt  blendpattern-16c.tim  main.c  makefile  texture.s.template
examples/graphics/rgb24/: CMakeLists.txt  main.c  makefile  tim.s  tim.s.template
examples/graphics/tilesasm/: CMakeLists.txt  data.s  data.s.template  drawtiles.s  main.c  tiles_256.tim
examples/gte/: main.c  makefile
examples/hello/: main.c  makefile
examples/io/pads/: CMakeLists.txt  main.c  spi.c  spi.h
examples/io/system573/: CMakeLists.txt  iso.xml  k573io.c  k573io.h  main.c
examples/lowlevel/cartrom/: CMakeLists.txt  bios.inc  cop0.inc  makefile  readme.txt  rom.ld  rom.s
examples/mdec/mdecimage/: CMakeLists.txt  encode_image.py  main.c
examples/mdec/strvideo/: CMakeLists.txt  iso.xml  main.c  system.cnf
examples/n00bdemo/: data.s  disp.c  main.c  makefile  overlay.c  plasma_tbl.c  plasma_tbl.h  smd_cel.s  smd_flat.s  smdparser.s
examples/n00bdemo/data/: bulb.smd  bulb.smx  bungirl.smd  bungirl.tim  celmapi.tim  clktower.tim  font.tim  hatkid.smd  hatkid.tim  logo.smd  mtekdisk.smd  mtekdisk.smx  mtektext.smd  n00blogo-pixel.tim  petscum.smd  rbowshade.smd  rbowshade.smx  riftbld1.tim  riftbld2.tim  star.smd  star_mask.smd  timerift.smd  (+1 more)
examples/render2tex/: main.c  makefile  texture.s  textures.tpj
examples/rgb24/: bunpattern.tim  main.c  makefile
examples/timer/: main.c  makefile
libpsn00b/: CMakeLists.txt  build.json.template  common.mk  makefile  readme.txt
libpsn00b/cmake/: flags.cmake  internal_setup.cmake  sdk.cmake  virtual_targets.cmake
libpsn00b/include/: assert.h  cassert  cctype  cstdint  cstdio  cstdlib  cstring  ctype.h  dlfcn.h  elf.h  gtereg.h  hwregs_a.h  hwregs_a.inc  hwregs_c.h  inline_c.h  inline_s.inc  ioctl.h  lzconfig.h  malloc.h  psxapi.h  psxcd.h  psxetc.h  psxgpu.h  psxgte.h  psxkernel.h  psxpad.h  psxpress.h  psxsio.h  psxsn.h  psxspu.h  setjmp.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h
libpsn00b/ldscripts/: dll.ld  exe.ld
libpsn00b/libc/: _mem_init.s  _start.s  _stubs.s  abort.c  abs.c  aff.c  aff.h  c++-support.cxx  clz.s  cpp_support.cpp  div.c  gnu_version.h  makefile  malloc.c  malloc.h  malloc.s  malloc_impl.h  malloc_old  memcmp.s  memcpy.s  memmove.s  memset.s  misc.c  printf.c  rand.s  readme.txt  scanf.c  setjmp.s  start.c  start.s  string.c  tlsf.c  tlsf.h  vsprintf.c  vsprintf.c-old
libpsn00b/libpsxcd/: makefile  readme.txt
libpsn00b/lzp/: bit.c  bit.h  compress.c  crc.c  lzconfig.h  lzp.c  lzp.h  lzqlp.h  makefile  qlp.c
libpsn00b/psxapi/: _initcd.s  _syscalls.s  drivers.s  fs.s  generate_stubs.py  makefile  stdio.s  stubs.json  sys.s
libpsn00b/psxcd/: _cd_control.s  cdgetsector.s  cdmix.s  cdread.c  cdsearchfile.c  common.c  getsector.c  isofs.c  isofs.h  makefile  misc.c  psxcd.c  psxcd_asm.s  readme.txt
libpsn00b/psxetc/: _dl_resolve_wrapper.s  dbugfont.c  dl.c  dmacallback.s  fntsort.c  font.c  getinterruptcallback.s  interruptcallback.s  interrupts.c  isr.s  logging.c  makefile  readme.txt  restartcallback.s
libpsn00b/psxgpu/: addprim.s  clearotagr.s  common.c  dbugfont.tim  drawing.c  drawotag.s  drawprim.s  drawsync.s  drawsynccallback.s  env.c  fntsort.c  font.c  getinterruptcallback.s  getode.s  gettimimage.c  getvideomode.s  image.c  loadimage.s  makefile  putdispenv.s  putdispenvraw.s  putdrawenv.s  readgpustat.s  readme.txt  resetgraph.s  restartcallback.s  setdefdispenv.c  setdefdrawenv.c  setdispmask.s  setvideomode.s  storeimage.s  vsynccallback.s
libpsn00b/psxgte/: applymatrixlv.s  compmatrixlv.s  hirotmatrix.c  hisin.c  initgeom.s  isin.c  makefile  matrix.c  matrix.s  mulmatrix.s  mulmatrix0.s  pushpopmatrix.s  readme.txt  scalematrix.s  scalematrixl.s  square0.s  squareroot.s  vector.s  vectornormals.s
libpsn00b/psxpress/: README.md  generate_lookup_table.py  mdec.c  vlc.c  vlc.s  vlc2.c
libpsn00b/psxsio/: _sio_control.s  makefile  sio.c  siocons.c  tty.c
libpsn00b/psxspu/: common.c  makefile  readme.txt  spuinit.s  spukeyon.s  spureverbon.s  spusetkey.s  spusetreverb.s  spusetreverbaddr.s  spusetvoiceraw.s  transfer.s
libpsn00b/smd/: smd.s  smd_cel.s  smd_flat.s  smdparser.s
tools/: CMakeLists.txt  makefile  tools.txt
tools/lzpack/: filelist.cpp  filelist.h  main.cpp  makefile
tools/plugin/: io_export_smx_v3.py
tools/smxlink/: main.cpp  makefile  timreader.cpp  timreader.h
tools/util/: elf.h  elf2cpe.c  elf2x.c  makefile
(+190 files in other folders)
